--- a/HomeApp/Server/Infrastructure/HomeApp.Infrastructure/HomeApp.Infrastructure.csproj
+++ b/HomeApp/Server/Infrastructure/HomeApp.Infrastructure/HomeApp.Infrastructure.csproj
@@ -8,4 +8,14 @@
     <ProjectReference Include="..\..\Application\HomeApp.Application\HomeApp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.7" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.2.0" />
+  </ItemGroup>
+
 </Project>
