--- a/HomeApp/Server/Presentation/Server/appsettings.json
+++ b/HomeApp/Server/Presentation/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HomeApp;Trusted_Connection=True;MultipleActiveResultSets=true"   
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
