--- a/HomeApp/Server/Application/HomeApp.Application/HomeApp.Application.csproj
+++ b/HomeApp/Server/Application/HomeApp.Application/HomeApp.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OneOf" Version="2.1.155" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Domain\HomeApp.Domain\HomeApp.Domain.csproj" />
   </ItemGroup>
 
