OpenId Connect Implicit flow with google identity provider

--- a/HomeApp/Client/HomeApp.Client/Properties/launchSettings.json
+++ b/HomeApp/Client/HomeApp.Client/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63644",
-      "sslPort": 44387
+      "applicationUrl": "http://localhost:59086",
+      "sslPort": 44338
     }
   },
   "profiles": {
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "HomeApp": {
+    "HomeApp.Client": {
       "commandName": "Project",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
