--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,15 @@
-version: '3.1'
+version: '3.4'
 
 services:
+  homeapp.gateway:
+    image: ${DOCKER_REGISTRY-}homeappgateway
+    build:
+      context: .
+      dockerfile: HomeApp.Gateway/Dockerfile
 
-  elasticsearch:
-   container_name: elasticsearch
-   image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
-   ports:
-    - 9200:9200
-   volumes:
-    - elasticsearch-data:/usr/share/elasticsearch/data
-   environment:
-    - xpack.monitoring.enabled=true
-    - xpack.watcher.enabled=false
-    - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    - discovery.type=single-node
-   networks:
-    - elastic
+  homeapp.server:
+    image: ${DOCKER_REGISTRY-}homeappserver
+    build:
+      context: .
+      dockerfile: HomeApp/Server/Presentation/Server/Dockerfile
 
-  kibana:
-   container_name: kibana
-   image: docker.elastic.co/kibana/kibana:7.6.2
-   ports:
-    - 5601:5601
-   depends_on:
-    - elasticsearch
-   environment:
-    - ELASTICSEARCH_URL=http://localhost:9200
-   networks:
-    - elastic
-  
-networks:
-  elastic:
-    driver: bridge
-
-volumes:
-  elasticsearch-data:
