--- a/HomeApp.Map/HomeApp.Map.Client/HomeApp.Client/HomeApp.Map.Client.csproj
+++ b/HomeApp.Map/HomeApp.Map.Client/HomeApp.Client/HomeApp.Map.Client.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\HomeApp.Shared.csproj" />
+    <ProjectReference Include="..\..\HomeApp.Map.Shared\HomeApp.Map.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
