--- a/HomeApp.Map/HomeApp.Map.WebAPI/HomeApp.Domain/HomeApp.Map.Domain.csproj
+++ b/HomeApp.Map/HomeApp.Map.WebAPI/HomeApp.Domain/HomeApp.Map.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\HomeApp.Shared.csproj" />
+    <ProjectReference Include="..\..\HomeApp.Map.Shared\HomeApp.Map.Shared.csproj" />
   </ItemGroup>
 
 </Project>
