--- a/HomeApp.Map/HomeApp.Map.WebAPI/HomeApp.Infrastructure/HomeApp.Map.Infrastructure.csproj
+++ b/HomeApp.Map/HomeApp.Map.WebAPI/HomeApp.Infrastructure/HomeApp.Map.Infrastructure.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Application\HomeApp.Application\HomeApp.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
@@ -26,6 +22,10 @@
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeApp.Application\HomeApp.Map.Application.csproj" />
   </ItemGroup>
 
 </Project>
