--- a/HomeApp.Gateway/HomeApp.Gateway.csproj
+++ b/HomeApp.Gateway/HomeApp.Gateway.csproj
@@ -8,8 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hellang.Authentication.JwtBearer.Google" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Ocelot" Version="16.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeApp.Map\HomeApp.Map.Client\HomeApp.Client\HomeApp.Map.Client.csproj" />
   </ItemGroup>
 
 
