--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet build HomeApp.Gateway --configuration Release --no-restore
+    - name: Build
+      run: dotnet build HomeApp.Map/HomeApp.Map.WebAPI/Server --configuration Release --no-restore
