--- a/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Application/HomeCloud.Map.Application.csproj
+++ b/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Application/HomeCloud.Map.Application.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeCloud.Domain\HomeCloud.Map.Domain.csproj" />
+    <ProjectReference Include="..\HomeCloud.Map.Domain\HomeCloud.Map.Domain.csproj" />
   </ItemGroup>
 
 </Project>
