--- a/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/HomeCloud.Map.WebAPI.csproj
+++ b/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/HomeCloud.Map.WebAPI.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeCloud.Infrastructure\HomeCloud.Map.Infrastructure.csproj" />
+    <ProjectReference Include="..\HomeCloud.Map.Infrastructure\HomeCloud.Map.Infrastructure.csproj" />
   </ItemGroup>
 
 
