--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.4'
 
 services:
-  HomeCloud.gateway:
-    image: ${DOCKER_REGISTRY-}HomeCloudgateway
+  homecloud.gateway:
+    image: ${DOCKER_REGISTRY-}homecloudgateway
     build:
       context: .
       dockerfile: HomeCloud.Gateway/Dockerfile
 
-  HomeCloud.map.webapi:
-    image: ${DOCKER_REGISTRY-}HomeCloudmapwebapi
+  homecloud.map.webapi:
+    image: ${DOCKER_REGISTRY-}homecloudmapwebapi
     build:
       context: .
-      dockerfile: HomeCloud.Map/HomeCloud.Map.WebAPI/Server/Dockerfile
+      dockerfile: HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/Dockerfile
 
