--- a/HomeCloud.Home/HomeCloud.Home.Client/HomeCloud.Home.Client.csproj
+++ b/HomeCloud.Home/HomeCloud.Home.Client/HomeCloud.Home.Client.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\HomeCloud.Client.Common\HomeCloud.Client.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
