--- a/HomeCloud.Home/HomeCloud.Home.Client/HomeCloud.Home.Client.csproj
+++ b/HomeCloud.Home/HomeCloud.Home.Client/HomeCloud.Home.Client.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
@@ -16,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\HomeCloud.Client.Common\HomeCloud.Client.Common.csproj" />
+    <ProjectReference Include="..\..\HomeCloud.Map\HomeCloud.Map.Client\HomeCloud.Map.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
