--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -7,8 +7,7 @@ on:
     branches: [ release ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,3 +26,23 @@ jobs:
       run: dotnet restore HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation
     - name: Build HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation
       run: dotnet build HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation --configuration Release --no-restore
+
+  docker:
+    name: Publish - Docker Hub
+    runs-on: ubuntu-latest
+    needs: [test]
+    env:
+      REPO: ${{ secrets.DOCKER_REPO }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Docker Image
+        run: docker-compose build
+      - name: Publish Docker image
+        run: docker-compose push $REPO
+        
