--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.4'
 
 services:
   homecloud.gateway:
-    image: ${DOCKER_REGISTRY-}homecloudgateway
+    image: davidstahl97/homecloud
     build:
       context: .
       dockerfile: HomeCloud.Gateway/Dockerfile
 
   homecloud.map.webapi:
-    image: ${DOCKER_REGISTRY-}homecloudmapwebapi
+    image: davidstahl97/homecloud
     build:
       context: .
       dockerfile: HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/Dockerfile
