--- a/HomeCloud.Gateway/Dockerfile1.original
+++ b/HomeCloud.Gateway/Dockerfile1.original
@@ -8,10 +8,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["HomeCloud.Gateway/HomeCloud.Gateway.csproj", "HomeCloud.Gateway/"]
-COPY ["HomeCloud.Home/HomeCloud.Home.Client/HomeCloud.Home.Client.csproj", "HomeCloud.Home/HomeCloud.Home.Client/"]
-COPY ["HomeCloud.Book/HomeCloud.Book.Client/HomeCloud.Book.Client.csproj", "HomeCloud.Book/HomeCloud.Book.Client/"]
-COPY ["HomeCloud.Client.Common/HomeCloud.Client.Common.csproj", "HomeCloud.Client.Common/"]
-COPY ["HomeCloud.Map/HomeCloud.Map.Client/HomeCloud.Map.Client.csproj", "HomeCloud.Map/HomeCloud.Map.Client/"]
+COPY ["HomeCloud.Map/HomeCloud.Map.Client/HomeCloud.Map.Client/HomeCloud.Map.Client.csproj", "HomeCloud.Map/HomeCloud.Map.Client/HomeCloud.Map.Client/"]
 COPY ["HomeCloud.Map/HomeCloud.Map.Shared/HomeCloud.Map.Shared.csproj", "HomeCloud.Map/HomeCloud.Map.Shared/"]
 RUN dotnet restore "HomeCloud.Gateway/HomeCloud.Gateway.csproj"
 COPY . .
