--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Build Docker Image
         run: docker-compose build
       - name: Publish Docker image
-        run: docker-compose push $REPO
+        run: docker-compose push
         
