--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,4 +45,22 @@ jobs:
         run: docker-compose build
       - name: Publish Docker image
         run: docker-compose push
+  
+  publish:
+    name: Publish - Server
+    runs-on: ubuntu-latest
+    needs: [ docker ]
+    steps:
+      - name: executing remote docker pull
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secret.HOST }}
+          username: ${{ secret.HOST_USERNAME }}
+          password: ${{ secret.HOST_PASSWORD }}
+          port: ${{ secret.SSH_PORT }}
+          script: |
+            docker pull ${{ secrets.DOCKER_REPO }}
+            docker stop homecloudapp
+            docker system prune -f
+            docker run -d --name=homecloudapp ${{ secrets.DOCKER_REPO }}
         
