--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,22 @@ version: '3.4'
 
 services:
   homecloud.gateway:
-    image: davidstahl97/homecloud
+    image: ${DOCKER_REGISTRY-}homecloudgateway
     build:
       context: .
       dockerfile: HomeCloud.Gateway/Dockerfile
+    ports:
+        - "5001:5001"
+    environment:
+        - ASPNETCORE_URLS=http://+:5010
 
   homecloud.map.webapi:
-    image: davidstahl97/homecloud
+    image: ${DOCKER_REGISTRY-}homecloudmapwebapi
     build:
       context: .
       dockerfile: HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/Dockerfile
+    ports:
+        - "5010:5010"
+    environment:
+        - ASPNETCORE_URLS=http://+:5001
 
