--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,26 +41,10 @@ jobs:
           java-version: 11.0.4
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
-      - name: Build Docker Image
-        run: docker-compose build
-      - name: Publish Docker image
+      - name: Build Docker Compose
+        run: docker-compose build --pull
+      - name: Publish Docker images
         run: docker-compose push
-  
-  publish:
-    name: Publish - Server
-    runs-on: ubuntu-latest
-    needs: [ docker ]
-    steps:
-      - name: executing remote docker pull
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.HOST_USERNAME }}
-          password: ${{ secrets.HOST_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            docker pull ${{ secrets.DOCKER_REPO }}
-            docker stop homecloudapp
-            docker system prune -f
-            docker run -d --name=homecloudapp ${{ secrets.DOCKER_REPO }}
+      - name: Logout
+        run: docker logout  
         
