--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         - ASPNETCORE_URLS=http://+:5001;https://+:5000
         - ASPNETCORE_Kestrel__Certificates__Default__Password=test123
         - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/homecloud-david.private_key.pfx
-    volumns:
+    volumes:
         - ~/.aspnet/https:/https:ro
 
   homecloud.map.webapi:
