--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         - ASPNETCORE_URLS=http://+:5001;https://+:5000
         - ASPNETCORE_Kestrel__Certificates__Default__Password=test123
         - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/homecloud-david.private_key.pfx
+        - ASPNETCORE_ENVIRONMENT=Production
     volumes:
         - ~/.aspnet/https:/https:ro
 
@@ -25,4 +26,5 @@ services:
         - "5010:5010"
     environment:
         - ASPNETCORE_URLS=http://+:5010
+        - ASPNETCORE_ENVIRONMENT=Production
 
