appsettings Environment variables

--- a/HomeCloud.Home/HomeCloud.Home.Client/wwwroot/appsettings.json
+++ b/HomeCloud.Home/HomeCloud.Home.Client/wwwroot/appsettings.json
@@ -1,3 +1,8 @@
 {
-
+  "Google": {
+    "Authority": "https://accounts.google.com/",
+    "ResponseType": "id_token",
+    "Scopes": "openid;email",
+    "AuthenticationType": "google"
+  }
 }
