--- a/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/Properties/launchSettings.json
+++ b/HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63644",
-      "sslPort": 44387
+      "applicationUrl": "http://localhost:5010"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
