--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
         - ASPNETCORE_URLS=http://+:5010
         - ASPNETCORE_ENVIRONMENT=Production
         
-  homecloud.users.server:
-    image: davidstahl97/homecloud-user-server
+  homecloud.users.service:
+    image: davidstahl97/homecloud-users-service
     build:
         context: .
-        dockerfile: HomeCloud.User/HomeCloud.User.Server/Dockerfile
+        dockerfile: HomeCloud.Users/HomeCloud.Users.Service/Dockerfile
     ports:
         - "64676:64676"
     environment:
