fix HomeCloud.Users.Service Dockerfile

--- a/HomeCloud.Users/HomeCloud.Users.Service/Dockerfile
+++ b/HomeCloud.Users/HomeCloud.Users.Service/Dockerfile
@@ -2,20 +2,21 @@
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 64676
+EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["HomeCloud.Users/HomeCloud.Users.Service/HomeCloud.User.Server.csproj", "HomeCloud.Users/HomeCloud.Users.Service/"]
-RUN dotnet restore "HomeCloud.Users/HomeCloud.Users.Service/HomeCloud.User.Server.csproj"
+COPY ["HomeCloud.Users/HomeCloud.Users.Service/HomeCloud.Users.Service.csproj", "HomeCloud.Users/HomeCloud.Users.Service/"]
+RUN dotnet restore "HomeCloud.Users/HomeCloud.Users.Service/HomeCloud.Users.Service.csproj"
 COPY . .
 WORKDIR "/src/HomeCloud.Users/HomeCloud.Users.Service"
-RUN dotnet build "HomeCloud.User.Server.csproj" -c Release -o /app/build
+RUN dotnet build "HomeCloud.Users.Service.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "HomeCloud.User.Server.csproj" -c Release -o /app/publish
+RUN dotnet publish "HomeCloud.Users.Service.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "HomeCloud.User.Server.dll"]
+ENTRYPOINT ["dotnet", "HomeCloud.Users.Service.dll"]
