--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Build Docker Compose
-        run: docker-compose build
+        run: docker-compose -f docker-compose.yml -f docker-compose.prod.yml build
       - name: Publish Docker images
         run: docker-compose push
       - name: Logout
