--- a/HomeCloud.Users/HomeCloud.Users.Service/appsettings.Production.json
+++ b/HomeCloud.Users/HomeCloud.Users.Service/appsettings.Production.json
@@ -1,3 +1,9 @@
 ﻿{
-
+  "IdentityServer": {
+    "Key": {
+      "Type": "File",
+      "FilePath": "/https/homecloud-david.private_key.pfx",
+      "Password": "test123"
+    }
+  }
 }
