--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
         - ConnectionStrings__SqlConnection=Server=usersdb;Database=UsersDb;User=sa;Password=BigPassw0rd
     depends_on:
         - usersdb
+    volumes:
+      - ~/.aspnet/https:/https:ro    
         
   usersdb:
     container_name: homecloud.users.db
