--- a/HomeCloud.Users/HomeCloud.Users.Service/appsettings.json
+++ b/HomeCloud.Users/HomeCloud.Users.Service/appsettings.json
@@ -16,5 +16,8 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "certificates": {
+    "signing": "/userservice/usersService.pfx"
+  }
 }
