--- a/HomeCloud.Users/HomeCloud.Users.Service/appsettings.json
+++ b/HomeCloud.Users/HomeCloud.Users.Service/appsettings.json
@@ -14,6 +14,11 @@
       "HomeCloud.User.Client": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "File",
+      "FilePath": "/userservice/usersService.pfx",
+      "Password": "password123"
     }
   },
   "AllowedHosts": "*",
