--- a/HomeCloud.Map/HomeCloud.Map.Client/HomeCloud.Map.Client.csproj
+++ b/HomeCloud.Map/HomeCloud.Map.Client/HomeCloud.Map.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="BlazorLeaflet" Version="0.4.0-alpha" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
