--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,15 +15,8 @@ jobs:
       with:
         dotnet-version: 3.1.301
     
-    - name: Install dependencies HomeCloud.Gateway
-      run: dotnet restore HomeCloud.Gateway
-    - name: Build HomeCloud.Gateway
-      run: dotnet build HomeCloud.Gateway --configuration Release --no-restore
-    
-    - name: Install dependencies HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation
-      run: dotnet restore HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation
-    - name: Build HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation
-      run: dotnet build HomeCloud.Map/HomeCloud.Map.WebAPI/HomeCloud.Map.Presentation --configuration Release --no-restore
+    - name: Build HomeCloud.Maps.Server
+      run: dotnet build src/backend/HomeCloud.Maps.Server --configuration Release --no-restore
 
   docker:
     name: Publish - Docker Hub
@@ -65,7 +58,5 @@ jobs:
             curl --remote-name https://raw.githubusercontent.com/DavidStahl97/HomeCloud/master/docker-compose.prod.yml
             
             docker-compose down
-            docker pull davidstahl97/homecloud-gateway
-            docker pull davidstahl97/homecloud-map-webapi
-            docker pull davidstahl97/homecloud-users-service
+            docker pull davidstahl97/homecloud.maps.server
             docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
