--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,14 @@ version: '3.4'
 
 services:
   homecloud.maps.server:
-    image: ${DOCKER_REGISTRY-}homecloudmapsserver
+    container_name: homecloud.maps.server
     build:
       context: .
       dockerfile: src/backend/HomeCloud.Maps.Server/Dockerfile
+    ports:
+      - "80:5001"
+      - "443:5000"
+    environment:
+      - ASPNETCORE_URLS=https://+:5000;http://+:5001
+    volumes:
+      - ~/.aspnet/https:/https:ro
