--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         dotnet-version: 5.0.100
     
+    - name: Install dependencies HomeCloud.Maps.Server
+      run: dotnet restore src/backend/HomeCloud.Maps.Server
     - name: Build HomeCloud.Maps.Server
       run: dotnet build src/backend/HomeCloud.Maps.Server --configuration Release --no-restore
 
