--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.4'
 
 services:
-  homecloud.maps.server:
+  homecloud-maps-server:
     container_name: homecloud-maps-server
-    image: davidstahl97/homecloud-maps-server
     build:
       context: .
       dockerfile: ./src/backend/HomeCloud.Maps.Server/Dockerfile
