--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.4'
 services:
   homecloud-maps-server:
     container_name: homecloud-maps-server
+    image: davidstahl97/homecloud-maps-server
     build:
       context: .
       dockerfile: ./src/backend/HomeCloud.Maps.Server/Dockerfile
