--- a/src/backend/HomeCloud.Maps.Server/appsettings.Development.json
+++ b/src/backend/HomeCloud.Maps.Server/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Google": {
+    "ClientId": "484017769198-f2t8l7du3af59ivm0s9l41uie90ssun0.apps.googleusercontent.com"
   }
 }
