--- a/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
+++ b/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
@@ -1,8 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HomeCloud.Maps.Application\HomeCloud.Maps.Application.csproj" />
