--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,16 @@ services:
     build:
       context: .
       dockerfile: ./src/backend/HomeCloud.Maps.Server/Dockerfile
-    ports:
-      - "80:5001"
-      - "443:5000"
     environment:
       - ASPNETCORE_URLS=https://+:5000;http://+:5001
+      - MongoDb__ConnectionString=mongodb://mongo:27017
     volumes:
       - ~/.aspnet/https:/https:ro
+    external_links:
+      - mongo 
+  
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+      - '27017:27017'
