--- a/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
+++ b/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
