--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       dockerfile: ./src/backend/HomeCloud.Maps.Server/Dockerfile
     environment:
       - ASPNETCORE_URLS=https://+:5000;http://+:5001      
+      - MongoDb__ConnectionString=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false
     volumes:
       - ~/.aspnet/https:/https:ro
     external_links:
       - mongo
-    env_file:
-      - homecloud-maps-server.env
   
   mongo:
     image: mongo
@@ -22,7 +21,8 @@ services:
     restart: always
     ports:
       - 27018:27017
-    env_file:
-      - mongo.env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - ./mongo-volumne:/data/db   
