--- a/src/frontend/HomeCloud.Maps.Client/wwwroot/appsettings.Development.json
+++ b/src/frontend/HomeCloud.Maps.Client/wwwroot/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "Google": {
-    "ClientId": "484017769198-f2t8l7du3af59ivm0s9l41uie90ssun0.apps.googleusercontent.com",
+    "ClientId": "484017769198-f2t8l7du3af59ivm0s9l41uie90ssun0.apps.googleusercontent.com"
   }
 }
