--- a/src/backend/HomeCloud.Maps.Server/appsettings.Production.json
+++ b/src/backend/HomeCloud.Maps.Server/appsettings.Production.json
@@ -1,4 +1,23 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MongoDB",
+        "Args": {
+          "collectionName": "homecloud-maps-logs",
+          "cappedMaxSizeMb": "1024",
+          "cappedMaxDocuments": "50000"
+        }
+      }
+    ]
+  },
   "Google": {
     "ClientId": "484017769198-51sqbl5eb8erjmnk4m9sk5vludjo24h6.apps.googleusercontent.com"
   }
