--- a/src/frontend/HomeCloud.Maps.Client.WebApi/HomeCloud.Maps.Client.WebApi.csproj
+++ b/src/frontend/HomeCloud.Maps.Client.WebApi/HomeCloud.Maps.Client.WebApi.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="..\..\..\..\..\Desktop\swagger.json" CodeGenerator="NSwagCSharp" Link="OpenAPIs\swagger.json" />
+    <None Remove="swagger.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" />
   </ItemGroup>
 
   <ItemGroup>
