--- a/src/backend/HomeCloud.Maps.Application/HomeCloud.Maps.Application.csproj
+++ b/src/backend/HomeCloud.Maps.Application/HomeCloud.Maps.Application.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
   </ItemGroup>
 
