--- a/src/backend/HomeCloud.Maps.Server/HomeCloud.Maps.Server.csproj
+++ b/src/backend/HomeCloud.Maps.Server/HomeCloud.Maps.Server.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hellang.Authentication.JwtBearer.Google" Version="2.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
