Tours Search Feature

--- a/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
+++ b/src/backend/HomeCloud.Maps.Infrastructure/HomeCloud.Maps.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+    <PackageReference Include="OneOf" Version="3.0.178" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
 
