restructure test projects for code coverage

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ mongo-volumne/
 
 # code coverage
 coveragereport/
-CoverageResults/
+code-coverage/
 *.cobertura.xml
 
 ## Ignore Visual Studio temporary files, build results, and
