--- a/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
+++ b/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -13,7 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,11 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\backend\HomeCloud.Maps.Infrastructure\HomeCloud.Maps.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\backend\HomeCloud.Maps.Server\HomeCloud.Maps.Server.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="GPX\2021-01-31_311521186_Hattsteinweier.gpx">
+    <None Update="Backend\Infrastructure\GPX\2021-01-31_311521186_Hattsteinweier.gpx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
